--- a/3D website/sculpt.html
+++ b/3D website/sculpt.html
@@ -6,6 +6,51 @@
     <title>3D Sculpting</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+<style>
+    body {
+        margin: 0;
+        font-family: Arial, sans-serif;
+    }
+    .navbar {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        background-color: #333;
+        padding: 10px 20px;
+    }
+    .navbar img {
+        height: 50px;
+    }
+    .nav-links {
+        list-style: none;
+        display: flex;
+        gap: 20px;
+    }
+    .nav-links li {
+        display: inline;
+    }
+    .nav-links a {
+        color: white;
+        text-decoration: none;
+        font-size: 16px;
+    }
+    .nav-links a:hover {
+        text-decoration: underline;
+    }
+</style>
+</head>
+<body>
+<nav class="navbar">
+    <img src="logo.png" alt="Logo">
+    <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="profile.html">Profile</a></li>
+        <li><a href="editor.html">3D Editor</a></li>
+        <li><a href="logout.html">Logout</a></li>
+    </ul>
+</nav>
+</body>
+</html>
 <body>
     <button onclick="window.location.href='index.html'">Back to Home</button>
     <div id="3d-container"></div>
